--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cjs-expose",
-    "version": "1.1.0",
+    "version": "1.2.0",
     "description": "cjs-expose private commonJS module functions easily",
     "main": "index.js",
     "scripts": {
@@ -16,9 +16,7 @@
     "devDependencies": {
         "mocha": "^3.5.3"
     },
-    "dependencies": {
-        "uuid": "^3.1.0"
-    },
+    "dependencies": {},
     "keywords": [
         "cjs-expose",
         "test",
